--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,19 +5,23 @@
     padding: 0;
 }
 .footer {
-    background: linear-gradient(135deg, #2c3e50, #4ca1af);
+    background: linear-gradient(90deg, #0f2027, #203a43, #2c5364);
   color: white;
-  padding: 40px 20px 20px;
+  padding: 20px;
+  text-align: center;
   text-align: center;
   margin-top: 30px;
 }
 
 .footer-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  max-width: 1200px;
+display: grid;
+grid-template-columns: repeat(auto-fit, minmax(300px,1fr ));
   margin: auto;
+}
+
+.footer-img > img{
+  width: 200px;
+
 }
 
 .footer-about,
