--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -80,3 +80,23 @@
 .register-link a:hover {
   text-decoration: underline;
 }
+
+.error-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  gap: 20px;
+}
+.error-container >button{
+  background-color: rgb(2, 0, 128);
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  border: none;
+width: 120px;
+border-radius: 5px;
+  padding: 12px;
+  cursor: pointer;
+}
