--- a/src/components/ProductCard/Product.css
+++ b/src/components/ProductCard/Product.css
@@ -1,8 +1,8 @@
 /* Card Container */
 .card {
   border: none;
-  width: 100%;
-  height: 400px;
+  height: 440px;
+  width: 300px;
   border-radius: 16px;
   overflow: hidden;
   background: #fff;
@@ -11,12 +11,12 @@
 }
 
 .card:hover {
-  transform: translateY(-10px) scale(1.02);
   box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
 }
 
 /* Watch Image */
 .watch-img {
+  width: 100%;
   height: 230px;
   object-fit: cover;
   border-bottom: 2px solid #f1f1f1;
