--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,5 +1,4 @@
-
-.form-container{
+.form-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,8 +9,10 @@
   background: #fff;
   padding: 30px 40px;
   border-radius: 12px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-  width:600px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  width: 600px;
   text-align: center;
 }
 
@@ -81,7 +82,7 @@
   text-decoration: underline;
 }
 
-.error-container{
+.error-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -89,14 +90,13 @@
   height: 80vh;
   gap: 20px;
 }
-.error-container >button{
-  background-color: rgb(2, 0, 128);
-  color: white;
+.error-container > button {
+  border: 2px solid blue;
+  color: black;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-  border: none;
-width: 120px;
-border-radius: 5px;
-  padding: 12px;
+  width: 120px;
+  border-radius: 20px;
+  padding: 8px;
   cursor: pointer;
 }
