--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -1,30 +1,30 @@
-*{
-    margin: 0;
-    box-sizing: border-box;
-    padding: 0;
+* {
+  margin: 0;
+  box-sizing: border-box;
+  padding: 0;
 }
 
-.not-found{
-    color: red;
-    text-align: center;
-    font-weight: bold;
-
+.not-found {
+  color: red;
+  text-align: center;
+  font-weight: bold;
 }
 
-.back-home-btn{
-    background-color: blue;
-    color: white;
-    padding:10px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    
+.back-home-btn {
+  border: 2px solid blue;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  width: 120px;
+  border-radius: 20px;
+  padding: 8px;
+  cursor: pointer;
 }
 
-.nav-con{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 20px;
+.nav-con {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
 }
