--- a/src/components/ProductCard/Product.css
+++ b/src/components/ProductCard/Product.css
@@ -72,11 +72,11 @@
   padding: 10px 25px;
   text-decoration: none;
   display: inline-block;
-  transition: all 0.3s ease;
 }
 
 .btn-gradient:hover {
   background: linear-gradient(135deg, #0056d6, #0095d9);
+  transition: all 0.5s ease-in-out;
   box-shadow: 0 5px 15px rgba(0, 114, 255, 0.4);
   transform: translateY(-3px);
 }
