--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -62,6 +62,7 @@
   font-size: 1rem;
   outline: none;
   transition: border 0.3s ease;
+  color: black;
 }
 
 .form-group input:focus,
@@ -125,7 +126,6 @@
   position: fixed;
   top: 0;
   left: 0;
-
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
