--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -139,7 +139,7 @@
 
 /* Loader */
 .loading {
-  color: white;
+  color: black;
   text-align: center;
   margin-top: 40vh;
   font-family: "Poppins", sans-serif;
@@ -149,7 +149,7 @@
 @keyframes fadeIn {
   from {
     opacity: 0;
-    transform: translateY(15px);
+    transform: translateY(40px);
   }
   to {
     opacity: 1;
