--- a/src/components/ProductCard/Product.css
+++ b/src/components/ProductCard/Product.css
@@ -14,7 +14,7 @@
   box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   
-}.
+}
 
 .card:hover {
   box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
@@ -46,6 +46,7 @@
   font-weight: 700;
   margin-bottom: 10px;
   color: #222;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 /* Description */
