--- a/src/components/ProductCard/Product.css
+++ b/src/components/ProductCard/Product.css
@@ -1,3 +1,6 @@
+.card-container{
+  
+}
 .card-container >a{
   text-decoration: none;
 
@@ -13,6 +16,7 @@
   background: #fff;
   box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  margin-bottom: 20px;
   
 }
 
