--- a/src/components/ProductCard/Product.css
+++ b/src/components/ProductCard/Product.css
@@ -1,6 +1,16 @@
 .card-container{
-  
+display: flex;
+
+flex-wrap: wrap;
+justify-content: space-around;
+align-items: center;
+margin-top: 20px;
+gap: 20px;
+margin-bottom: 20px;
+
 }
+
+
 .card-container >a{
   text-decoration: none;
 
