update cart page

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -95,7 +95,15 @@ body {
 .nav-links .active::after {
   width: 100%;
 }
+.search-box >img{
+  width: 40px;
+  margin: 10px;
+}
+.search-box{
+  display: flex;
+    align-items: center;
 
+}
 /* Search Box */
 .search-box-container {
   display: flex;
