--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -4,6 +4,19 @@
   min-height: 100vh;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+.shoping-cart-container{
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+.shoping-cart-message{
+  text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  margin-bottom: 10px;
+  padding: 12px;
+  border-radius: 5px;
+}
 
 .cart-empty-message{
   text-align: center;
@@ -16,9 +29,8 @@
   align-items: center;
   background: #fff;
   padding: 15px;
-  margin-bottom: 15px;
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
 }
 
 .cart-img {
@@ -58,10 +70,18 @@
   cursor: pointer;
 }
 
+.summery{
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+}
 .cart-summary {
-  text-align: right;
-  margin-top: 30px;
-  margin: 10px;
+ display: flex;
+ justify-content: flex-end;
+ flex-direction: column;
+ gap: 10px;
+ width:200px;
 }
 
 .clear-btn {
