--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -11,8 +11,8 @@
 }
 .shoping-cart-message{
   text-align: center;
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  font-family:'Times New Roman', Times, serif;
   margin-bottom: 10px;
   padding: 12px;
   border-radius: 5px;
@@ -30,7 +30,8 @@
   background: #fff;
   padding: 15px;
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
+  box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
+
 }
 
 .cart-img {
