--- a/src/styles/Product.css
+++ b/src/styles/Product.css
@@ -1,42 +1,33 @@
-.card-container{
-display: flex;
-flex-wrap: wrap;
-justify-content: space-around;
-align-items: center;
-margin-top: 20px;
-gap: 20px;
-margin-bottom: 20px;
-
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 20px;
+  gap: 20px;
+  margin-bottom: 20px;
 }
 
-
-.card-container >a{
+.card-container > a {
   text-decoration: none;
-
 }
 
 /* Card Container */
 .card {
   border: none;
-  height: 440px;
-  width: 300px;
-  border-radius: 16px;
+  height: 400px;
+  width: 200px;
+  border-radius: 7px;
   overflow: hidden;
   background: #fff;
-  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   margin-bottom: 20px;
-  
-}
-
-.card:hover {
-  box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
 }
 
 /* Watch Image */
 .watch-img {
   width: 100%;
-  height: 230px;
+  height: 250px;
   object-fit: cover;
   border-bottom: 2px solid #f1f1f1;
   transition: transform 0.4s ease;
@@ -59,7 +50,7 @@ margin-bottom: 20px;
   font-weight: 700;
   margin-bottom: 10px;
   color: #222;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
 /* Description */
