update the button

--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -13,7 +13,7 @@
 }
 
 .about-fluid {
-  background-image: url("../src/assets/images/About-img.jpg");
+  background-image: url("/public/images/About-img.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
